updated frontend and backend

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/frontend/public/BACKYARD-BBQ.svg" type="image/svg"/>
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/bbq.svg"
+      type="image/svg"
+      sizes="32x32"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Best Restaurant with Amazing Food" />
